--- a/app/templates/lista_pacientes.html
+++ b/app/templates/lista_pacientes.html
@@ -4,31 +4,32 @@
 
 {% block content %}
 <h2>Lista de Pacientes</h2>
-<table>
+<table class="table">
     <thead>
         <tr>
-            <th>Nombre</th>
-            <th>Apellidos</th>
-            <th>Correo</th>
-            <th>Ciudad</th>
-            <th>Estatus</th>
-            <th>Último Pago</th>
-            <th>Acciones</th>
+            <th class="table__header">Nombre</th>
+            <th class="table__header">Apellidos</th>
+            <th class="table__header">Correo</th>
+            <th class="table__header">Ciudad</th>
+            <th class="table__header">Estatus</th>
+            <th class="table__header">Último Pago</th>
+            <th class="table__header">Acciones</th>
         </tr>
     </thead>
     <tbody>
         {% for paciente in pacientes %}
         <tr>
-            <td>{{ paciente['nombre'] }}</td>
-            <td>{{ paciente['apellido_paterno'] }} {{ paciente['apellido_materno'] }}</td>
-            <td>{{ paciente['correo'] }}</td>
-            <td>{{ paciente['ciudad'] }}</td>
-            <td>{{ paciente['status'] }}</td>
-            <td>{{ paciente['ultimo_pago'] if paciente['ultimo_pago'] else 'No registrado' }}</td>
-            <td>
-                <a href="{{ url_for('pacientes.detalle_paciente', id=paciente['id']) }}">Ver</a>
-                <a href="{{ url_for('pacientes.editar_paciente', id=paciente['id']) }}">Editar</a>
-                <a href="{{ url_for('historial_clinico.ver_crear_historial', paciente_id=paciente['id']) }}">Historial Clínico</a>
+            <td class="table__cell">{{ paciente['nombre'] }}</td>
+            <td class="table__cell">{{ paciente['apellido_paterno'] }} {{ paciente['apellido_materno'] }}</td>
+            <td class="table__cell">{{ paciente['correo'] }}</td>
+            <td class="table__cell">{{ paciente['ciudad'] }}</td>
+            <td class="table__cell">{{ paciente['status'] }}</td>
+            <td class="table__cell">{{ paciente['ultimo_pago'] if paciente['ultimo_pago'] else 'No registrado' }}</td>
+            <td class="table__cell">
+                <a href="{{ url_for('pacientes.detalle_paciente', id=paciente['id']) }}" class="action-button">Ver</a>
+                <a href="{{ url_for('pacientes.editar_paciente', id=paciente['id']) }}" class="action-button">Editar</a>
+                <a href="{{ url_for('historial_clinico.ver_crear_historial', paciente_id=paciente['id']) }}" class="action-button">Historial Clínico</a>
+                <a href="{{ url_for('valoracion.nueva_valoracion', paciente_id=paciente['id']) }}" class="action-button">Nueva Valoración</a>
             </td>
         </tr>
         {% endfor %}
