--- a/app/templates/lista_historiales.html
+++ b/app/templates/lista_historiales.html
@@ -4,23 +4,23 @@
 
 {% block content %}
 <h2>Lista de Historiales Clínicos</h2>
-<table>
+<table class="table">
     <thead>
         <tr>
-            <th>Paciente</th>
-            <th>Padecimientos</th>
-            <th>Actividad Física</th>
-            <th>Acciones</th>
+            <th class="table__header">Paciente</th>
+            <th class="table__header">Padecimientos</th>
+            <th class="table__header">Actividad Física</th>
+            <th class="table__header">Acciones</th>
         </tr>
     </thead>
     <tbody>
         {% for historial in historiales %}
         <tr>
-            <td>{{ historial['nombre'] }} {{ historial['apellido_paterno'] }} {{ historial['apellido_materno'] }}</td>
-            <td>{{ historial['padecimientos'] }}</td>
-            <td>{{ historial['tipo_actividad_fisica'] }} - {{ historial['frecuencia_actividad_fisica'] }}</td>
-            <td>
-                <a href="{{ url_for('historial_clinico.ver_crear_historial', paciente_id=historial['paciente_id']) }}">Ver/Editar</a>
+            <td class="table__cell">{{ historial['nombre'] }} {{ historial['apellido_paterno'] }} {{ historial['apellido_materno'] }}</td>
+            <td class="table__cell">{{ historial['padecimientos'] }}</td>
+            <td class="table__cell">{{ historial['tipo_actividad_fisica'] }} - {{ historial['frecuencia_actividad_fisica'] }}</td>
+            <td class="table__cell">
+                <a href="{{ url_for('historial_clinico.ver_crear_historial', paciente_id=historial['paciente_id']) }}" class="action-button">Ver/Editar</a>
             </td>
         </tr>
         {% endfor %}
