# Sistema de Alta de Pacientes (V52)

--- a/app/templates/lista_valoraciones.html
+++ b/app/templates/lista_valoraciones.html
@@ -4,32 +4,41 @@
 
 {% block content %}
 <h2>Valoraciones Antropométricas de {{ paciente['nombre'] }} {{ paciente['apellido_paterno'] }}</h2>
-<a href="{{ url_for('valoracion.nueva_valoracion', paciente_id=paciente['id']) }}" class="action-button">Nueva Valoración</a>
-<table class="table">
-    <thead>
-        <tr>
-            <th class="table__header">Fecha</th>
-            <th class="table__header">Número de Cita</th>
-            <th class="table__header">Peso (kg)</th>
-            <th class="table__header">IMC</th>
-            <th class="table__header">% Grasa</th>
-            <th class="table__header">Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for valoracion in valoraciones %}
-        <tr>
-            <td class="table__cell">{{ valoracion['fecha'] }}</td>
-            <td class="table__cell">{{ valoracion['numero_cita'] }}</td>
-            <td class="table__cell">{{ valoracion['peso'] }}</td>
-            <td class="table__cell">{{ valoracion['imc'] }}</td>
-            <td class="table__cell">{{ valoracion['porcentaje_grasa'] }}%</td>
-            <td class="table__cell">
-                <a href="#" class="action-button">Ver Detalles</a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<a href="{{ url_for('valoracion.nueva_valoracion', paciente_id=paciente['id']) }}" class="btn btn-primary">Nueva Valoración</a>
+<div class="table-container">
+    <table class="table">
+        <thead>
+            <tr>
+                <th class="table__header">Fecha</th>
+                <th class="table__header">Número de Cita</th>
+                <th class="table__header">Peso (kg)</th>
+                <th class="table__header">IMC</th>
+                <th class="table__header">% Grasa</th>
+                <th class="table__header">Tensión arterial</th>
+                <th class="table__header">Frecuencia cardíaca</th>
+                <th class="table__header">Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for valoracion in valoraciones %}
+            <tr>
+                <td class="table__cell">{{ valoracion['fecha'] }}</td>
+                <td class="table__cell text-center">{{ valoracion['numero_cita'] }}</td>
+                <td class="table__cell text-right">{{ valoracion['peso'] }}</td>
+                <td class="table__cell text-right">{{ valoracion['imc'] }}</td>
+                <td class="table__cell text-right">{{ valoracion['porcentaje_grasa'] }}%</td>
+                <td class="table__cell text-center">{{ valoracion['tension_arterial'] }}</td>
+                <td class="table__cell text-right">{{ valoracion['frecuencia_cardiaca'] }} lpm</td>
+                <td class="table__cell">
+                    <a href="{{ url_for('valoracion.detalle_valoracion', valoracion_id=valoracion['id']) }}" 
+                       class="action-button">
+                        Ver Detalles
+                    </a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
 
