--- a/app/templates/nueva_valoracion.html
+++ b/app/templates/nueva_valoracion.html
@@ -53,6 +53,14 @@
         <label for="pantorrilla" class="form-label">Pantorrilla (cm):</label>
         <input type="number" id="pantorrilla" name="pantorrilla" step="0.1" class="form-input" required>
     </div>
+    <div class="form-group">
+        <label for="tension_arterial" class="form-label">Tensión arterial:</label>
+        <input type="text" id="tension_arterial" name="tension_arterial" class="form-input" required placeholder="Ej: 120/80">
+    </div>
+    <div class="form-group">
+        <label for="frecuencia_cardiaca" class="form-label">Frecuencia cardíaca (lpm):</label>
+        <input type="number" id="frecuencia_cardiaca" name="frecuencia_cardiaca" class="form-input" required>
+    </div>
     <h3>Plicometría</h3>
     <div class="form-group">
         <label for="bicep" class="form-label">Bícep (mm):</label>
