--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,7 +37,7 @@
                         <li class="sidebar__item"><a href="{{ url_for('pacientes.lista_pacientes') }}" class="sidebar__link"><i class="fas fa-list sidebar__icon"></i> Lista de Pacientes</a></li>
                     </ul>
                 </li>
-                <li class="sidebar__item" x-data="{ open: false }">
+                <!--<li class="sidebar__item" x-data="{ open: false }">
                     <a @click="open = !open" class="sidebar__link sidebar__dropdown"><i class="fas fa-notes-medical sidebar__icon"></i> Historial Clínico</a>
                     <ul x-show="open" class="sidebar__submenu">
                         <li class="sidebar__item"><a href="{{ url_for('historial_clinico.lista_historiales') }}" class="sidebar__link"><i class="fas fa-clipboard-list sidebar__icon"></i> Lista de Historiales</a></li>
@@ -49,7 +49,7 @@
                         <li class="sidebar__item"><a href="{{ url_for('pacientes.lista_pacientes') }}" class="sidebar__link"><i class="fas fa-plus-circle sidebar__icon"></i> Nueva Valoración</a></li>
                         <li class="sidebar__item"><a href="{{ url_for('valoracion.lista_valoraciones', paciente_id=0) }}" class="sidebar__link"><i class="fas fa-list sidebar__icon"></i> Lista de Valoraciones</a></li>
                     </ul>
-                </li>
+                </li>-->
             </ul>
         </nav>
         <main class="content">
